fix: bottom container image alignment fixed

--- a/sass/bottom-container.sass
+++ b/sass/bottom-container.sass
@@ -1,6 +1,7 @@
 .bottom-container
     width: 100%
     display: grid
+    align-items: stretch
     font-size: 20px
     margin-top: 10.15em
     grid-template-columns: repeat(2, 1fr)
@@ -8,8 +9,8 @@
 
     &__get-started
         width: 83.4%
+        justify-self: center
         margin-top: 10.4%
-        margin-left: 8.94%
         font-size: 20px
         margin-bottom: 5.5em
 
@@ -31,11 +32,11 @@
 
     &__information
         width: 80.7%
+        justify-self: center
         grid-row-start: 2
         grid-column-start: 1
         grid-template-columns: repeat(2, 1fr)
         grid-template-rows: repeat(2, 1fr)
-        margin-left: 8.89%
         
 
         &__flex
@@ -78,11 +79,13 @@
                     margin: 0.5em 0 0
 
 
-    &__image-container
+    &__image
         width: 100%
+        align-self: center
         grid-row-start: 1
         grid-column-start: 2
         grid-row: span 2
+
 
 #flex-item-178k
         background-color: #C6D9E1
